--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.8",
+    "bushido-strap": "^2.9.2",
     "i": "^0.3.6",
     "lodash": "^4.17.15",
     "next": "9.3.2",
