--- a/package.json
+++ b/package.json
@@ -9,10 +9,30 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.8",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.13",
+    "@types/express": "^4.17.3",
+    "@types/express-session": "^1.17.0",
+    "@types/graphql": "^14.5.0",
+    "@types/ioredis": "^4.14.9",
+    "@types/node": "^13.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/redux-logger": "^3.0.7",
+    "@types/styled-components": "^5.0.1",
+    "@types/uuid": "^7.0.2",
+    "apollo-server-express": "^2.11.0",
+    "bcrypt": "^4.0.1",
     "bushido-strap": "^2.9.2",
+    "connect-redis": "^4.0.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "graphql": "^14.6.0",
     "i": "^0.3.6",
+    "ioredis": "^4.16.1",
     "lodash": "^4.17.15",
     "next": "9.3.2",
+    "pg": "^7.18.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.0",
@@ -20,8 +40,21 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reflect-metadata": "^0.1.13",
     "reset-css": "^5.0.1",
     "styled-components": "^5.0.1",
-    "styled-map": "^3.3.0"
+    "styled-map": "^3.3.0",
+    "ts-node": "^8.8.1",
+    "type-graphql": "^0.17.6",
+    "typeorm": "^0.2.24",
+    "typescript": "^3.8.3",
+    "uuid": "^7.0.2"
+  },
+  "devDependencies": {
+    "@types/faker": "^4.1.11",
+    "@types/jest": "^25.1.4",
+    "faker": "^4.1.0",
+    "jest": "^25.2.3",
+    "ts-jest": "^25.2.1"
   }
 }
