--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3",
     "@material-ui/core": "^4.9.8",
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.13",
@@ -20,7 +22,10 @@
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^5.0.1",
     "@types/uuid": "^7.0.2",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
     "apollo-server-express": "^2.11.0",
+    "apollo-server-micro": "^2.11.0",
     "bcrypt": "^4.0.1",
     "bushido-strap": "^2.9.2",
     "connect-redis": "^4.0.4",
@@ -28,10 +33,12 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "graphql": "^14.6.0",
+    "graphql-tools": "^4.0.7",
     "i": "^0.3.6",
     "ioredis": "^4.16.1",
     "lodash": "^4.17.15",
     "next": "9.3.2",
+    "path": "^0.12.7",
     "pg": "^7.18.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -51,9 +58,16 @@
     "uuid": "^7.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.13.1",
+    "@graphql-codegen/plugin-helpers": "^1.13.1",
+    "@graphql-codegen/typescript": "^1.13.1",
+    "@graphql-codegen/typescript-operations": "^1.13.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.13.1",
+    "@graphql-codegen/typescript-resolvers": "^1.13.1",
     "@types/faker": "^4.1.11",
     "@types/jest": "^25.1.4",
     "faker": "^4.1.0",
+    "graphql-let": "^0.9.4",
     "jest": "^25.2.3",
     "ts-jest": "^25.2.1"
   }
