--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,12 @@
     "alwaysStrict": true,
     "target": "esnext",
     "module": "esnext",
-    "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
+    "lib": [
+      "dom",
+      "es6",
+      "es2017",
+      "esnext.asynciterable"
+    ],
     "jsx": "preserve",
     "sourceMap": true,
     "moduleResolution": "node",
@@ -28,10 +33,16 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "strict": false
   },
-  "exclude": ["node_modules"],
-  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ],
   "trailing-comma": [
     true,
     {
