--- a/package.json
+++ b/package.json
@@ -1,74 +1,57 @@
 {
-  "name": "tetris-experiment",
+  "name": "with-typescript-graphql",
   "version": "0.1.0",
-  "private": true,
+  "author": "",
+  "license": "ISC",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "codegen": "graphql-let",
+    "dev": "yarn codegen && next",
+    "build": "yarn codegen && next build",
+    "start": "next start",
+    "remake": "psql -U postgres -a -f remakeDatabase.sql"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@apollo/react-ssr": "^3.1.3",
-    "@material-ui/core": "^4.9.8",
+    "@apollo/react-common": "3.1.3",
+    "@apollo/react-components": "^3.1.3",
+    "@apollo/react-hooks": "3.1.3",
+    "@apollo/react-ssr": "3.1.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/connect-redis": "^0.0.13",
-    "@types/express": "^4.17.3",
-    "@types/express-session": "^1.17.0",
-    "@types/graphql": "^14.5.0",
-    "@types/ioredis": "^4.14.9",
-    "@types/node": "^13.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^5.0.1",
-    "@types/uuid": "^7.0.2",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-server-express": "^2.11.0",
-    "apollo-server-micro": "^2.11.0",
-    "bcrypt": "^4.0.1",
+    "apollo-cache-inmemory": "1.6.5",
+    "apollo-client": "2.6.8",
+    "apollo-link-http": "1.5.16",
+    "apollo-link-schema": "1.2.4",
+    "apollo-server-micro": "2.10.1",
+    "apollo-utilities": "^1.3.3",
+    "bcryptjs": "^2.4.3",
     "bushido-strap": "^2.9.2",
-    "connect-redis": "^4.0.4",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
     "graphql": "^14.6.0",
-    "graphql-tools": "^4.0.7",
-    "i": "^0.3.6",
-    "ioredis": "^4.16.1",
-    "lodash": "^4.17.15",
-    "next": "9.3.2",
-    "path": "^0.12.7",
+    "graphql-tag": "^2.10.3",
+    "knex": "^0.20.13",
+    "knex-cleaner": "^1.3.0",
+    "next": "latest",
     "pg": "^7.18.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
-    "react-resize-component": "^0.1.7",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "reflect-metadata": "^0.1.13",
-    "reset-css": "^5.0.1",
-    "styled-components": "^5.0.1",
-    "styled-map": "^3.3.0",
-    "ts-node": "^8.8.1",
-    "type-graphql": "^0.17.6",
-    "typeorm": "^0.2.24",
-    "typescript": "^3.8.3",
-    "uuid": "^7.0.2"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.13.1",
-    "@graphql-codegen/plugin-helpers": "^1.13.1",
-    "@graphql-codegen/typescript": "^1.13.1",
-    "@graphql-codegen/typescript-operations": "^1.13.1",
-    "@graphql-codegen/typescript-react-apollo": "^1.13.1",
-    "@graphql-codegen/typescript-resolvers": "^1.13.1",
-    "@types/faker": "^4.1.11",
-    "@types/jest": "^25.1.4",
-    "faker": "^4.1.0",
-    "graphql-let": "^0.9.4",
-    "jest": "^25.2.3",
-    "ts-jest": "^25.2.1"
+    "@graphql-codegen/cli": "1.12.2",
+    "@graphql-codegen/plugin-helpers": "1.12.2",
+    "@graphql-codegen/typescript": "^1.12.2",
+    "@graphql-codegen/typescript-operations": "^1.12.2",
+    "@graphql-codegen/typescript-react-apollo": "^1.12.2",
+    "@graphql-codegen/typescript-resolvers": "1.12.2",
+    "@types/react": "^16.9.22",
+    "@types/react-dom": "^16.9.5",
+    "graphql-let": "0.x",
+    "typescript": "^3.8.2"
   }
 }
